<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="18dp"
        android:contentDescription="@+id/logo"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/enterAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="46dp"
        android:autofillHints="@string/amount"
        android:background="@color/yellow"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxLength="5"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/innerLinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/seekbarPercent"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingHorizontal="20dp"
            android:text="@string/seekbarvalue" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/innerLinear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tip"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/tip" />

        <TextView
            android:id="@+id/tipResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:paddingVertical="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/innerLinear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:paddingVertical="5dp"
        style="@style/linear">

        <TextView
            android:id="@+id/total"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:paddingVertical="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/result_shape"
        android:gravity="center"
        android:paddingVertical="54dp"
        android:text="@string/result"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"
        android:shadowColor="@color/black"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name" />


</LinearLayout>